# oyster-monorepo

./: .gitignore  .gitmodules  .solhint.json  README.md  api_keys.json  chain_ids.json  flake.nix  hardhat.config.ts  ip-to-vsock-raw-outgoing  package-lock.json  package.json
addresses/: 421614.json
attestation/server/: Cargo.toml  README.md  default.nix
attestation/server-custom/: README.md
attestation/server-custom-mock/: README.md
attestation/server-mock/: README.md  default.nix
attestation/verifier/: README.md
attestation/verifier-risczero/: README.md
cli/oyster-cvm/: Cargo.toml  README.md  Readme.md  default.nix  result
cli/oyster-cvm/idls/: market_v.json  oyster_credits.json
cli/oyster-cvm/src/: main.rs  types.rs
cli/oyster-cvm/src/abis/: credit_abi.json  credit_manager_abi.json  oyster_market_abi.json  usdc_abi.json
cli/oyster-cvm/src/args/: init_params.rs  pcr.rs  wallet.rs
cli/oyster-cvm/src/chain/: adapter.rs  evm.rs  mod.rs  sui.rs
cli/oyster-cvm/src/commands/: build.rs  deploy.rs  deposit.rs  derive.rs  image_id.rs  kms_contract.rs  list.rs  log.rs  mod.rs  register.rs  simulate.rs  stop.rs  update.rs  upload.rs  verify.rs  withdraw.rs
cli/oyster-cvm/src/configs/: arb.rs  blockchain.rs  bsc.rs  global.rs  mod.rs  sui.rs
cli/oyster-cvm/src/deployment/: adapter.rs  evm.rs  mod.rs  sui.rs
cli/oyster-cvm/src/utils/: bandwidth.rs  credit.rs  credit_manager.rs  job.rs  market.rs  mod.rs  provider.rs  solana.rs  token.rs  usdc.rs
contracts/contracts/: README.md  address.json  execReg.ts  gwReg.ts
contracts/contracts-foundry/: .env.example  foundry.toml  remappings.txt
contracts/enclaves/: MarketV1.sol
contracts/indexer/: README.md
contracts/indexer/oyster/framework/: .gitignore  Cargo.toml  PROVIDER_PATTERN.md
contracts/indexer/oyster/framework/migrations/2024-09-12-185350_create_jobs/: up.sql
contracts/indexer/oyster/framework/migrations/2024-09-15-151144_create_revise_rate_requests/: up.sql
contracts/indexer/oyster/framework/migrations/2025-07-14-102442_create_settlement_history/: down.sql
contracts/indexer/oyster/framework/migrations/2025-12-30-045006_expand_address_columns/: down.sql  up.sql
contracts/indexer/oyster/framework/migrations/2026-02-10-055648_create_lock_duration/: down.sql  up.sql
contracts/indexer/oyster/framework/src/: lib.rs  schema.rs
contracts/indexer/oyster/sui/: Cargo.toml
contracts/indexer/oyster/sui/src/: constants.rs  main.rs  provider.rs
contracts/indexer/oyster/sui/src/handlers/: job_closed.rs  job_deposited.rs  job_metadata_updated.rs  job_opened.rs  job_revise_rate_cancelled.rs  job_revise_rate_finalized.rs  job_revise_rate_initiated.rs  job_settled.rs  job_withdrew.rs  lock_created.rs  lock_deleted.rs  lock_wait_time_updated.rs  mod.rs  provider_added.rs  provider_removed.rs  provider_updated_with_cp.rs
contracts/indexer/oyster/sui/src/handlers/test_utils/: test_db.rs  test_helpers.rs  test_provider.rs
contracts/mocks/: IUSDC.sol
contracts/staking-contracts/: .gitignore  .solhint.json  hardhat.config.ts  package-lock.json  package.json
contracts/token/: Credit.sol
enclaves/: green.nix
enclaves/blue/: default.nix  setup.sh  supervisord.conf
enclaves/configs/: base.nix  disk-ro.nix  dns.nix  green.nix
enclaves/governance/: README.md  default.nix  setup.sh  supervisord.conf
enclaves/green/: default.nix
enclaves/testing/: green.nix
governance/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose-enclave.yml  docker-compose-local.yml  docker-compose.yml  rust-toolchain.toml
governance/src/: apidoc.rs  attestations.rs  config.rs  delegation.rs  governance.rs  governance_enclave.rs  handler.rs  kms.rs  lib.rs  main.rs  proposal.rs  token.rs  vote_factory.rs  vote_parser.rs  vote_registry.rs  vote_result.rs
governance/src/kms/: kms.rs  mod.rs  oyster_kms.rs
governance/src/middlewares/: allow_all_cors.rs  mod.rs  ratelimiter.rs  request_limiter.rs
initialization/governance/: Cargo.toml  Dockerfile  README.md  default.nix
initialization/governance/src/: config.rs  crypto.rs  governance_contract.rs  hash.rs  main.rs  server.rs  types.rs
initialization/governance/src/abis/: erc20_abi.json  governance_contract_abi.json
initialization/keygen/: README.md
initialization/logger/: README.md
initialization/pulse/: Cargo.toml
initialization/pulse-server/: Cargo.toml
initialization/pulse/src/: client.rs  server.rs
kernels/: tuna.patch
kms/derive-server-mock/: Cargo.toml  README.md  default.nix
kms/mock-derive-server/: Cargo.toml  README.md  default.nix
kms/root-server/: Cargo.toml  README.md
kms/root-server-contract/: README.md
local/dev-image/: default.nix  setup.sh  supervisord.conf
networking/ebpf-proxy/: .gitignore  default.nix  forward.c  intercept.bpf.c  proxy.bpf.c
networking/raw-proxy/: Cargo.toml
operator/arb-indexer/: .gitignore  Cargo.toml  README.md
operator/arb-indexer/abi/: MarketV1min.json
operator/arb-indexer/migrations/: 20250919140741_init.sql
operator/arb-indexer/src/: arb_client.rs  events.rs  indexer.rs  main.rs  repository.rs
operator/control-plane/: Cargo.toml  README.md  build.rs
operator/control-plane/src/: aws.rs  health.rs  lib.rs  main.rs  market.rs  market_solana.rs  market_sui.rs  server.rs  test.rs  utils.rs
operator/inject_gas_key/: Cargo.toml
operator/market-indexer/arb/: .gitignore  Cargo.toml  README.md  default.nix
operator/market-indexer/arb/abi/: MarketV1min.json
operator/market-indexer/arb/src/: arb.rs  main.rs
operator/market-indexer/framework/: .gitignore  Cargo.toml  README.md  build.rs
operator/market-indexer/framework/migrations/: 20250919140741_init.sql
operator/market-indexer/framework/src/: chain.rs  events.rs  health.rs  lib.rs  repository.rs  schema.rs
operator/market-indexer/sui/: .gitignore  Cargo.toml  README.md
operator/market-indexer/sui/src/: main.rs  sui.rs
operator/setup-aws/: index.ts
scripts/helper/: helper.ts
sdks/docker-enclave/: Dockerfile  Dockerfile.amd64  default.nix  docker-compose-start.sh  docker-compose.yml  policy.json  setup.sh  (+3 more)
(+297 files in other folders)
