[package]
name = "governance"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-extensible-rate-limit = "0.4.0"
actix-web = "4.11.0"
alloy = "1.1.0"
anyhow = "1.0.100"
async-trait = "0.1.89"
ecies = "0.2.10"
hex = "0.4.3"
serde = "1.0.228"
serde_json = "1.0.145"
url = "2.5.7"
tokio = {version = "1.47.1"}
futures= {version = "0.3.31"}
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
log = "0.4.28"
env_logger = "0.11.8"
actix-cors = "0.7.1"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }

[profile.dev]
panic = "abort"
debug = true

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
