[package]
name = "oyster-cvm"
version = "4.3.1"
edition = "2024"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.48", features = ["full"] }
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["multipart", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0.100"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
alloy = {version = "1.1.2", features = ["full"]}
oyster-sdk = "0.17.1"
hex = "0.4.3"
futures-util = "0.3"
libsodium-sys-stable = "1.22.5"
base64 = "0.22.1"
bech32 = "0.11.0"
ureq = "3.1.4"
prettytable-rs = "0.10"
chrono = "0.4.42"
lazy_static = "1.5.0"
k256 = "0.13.4"
async-trait = "0.1.89"
bcs = "0.1.6"
sui-rpc = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-rpc"}
sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types"}
sui-crypto = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-crypto", features = ["ed25519", "secp256r1", "secp256k1"]}
