[package]
name = "governance"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.9"  
ethers = { version = "2.0", features = ["abigen", "rustls", "ws"] }
ureq = "3.0.3"
clap = { version = "4.0", features = ["derive"] }
libsodium-sys-stable = { version = "1.22.2", features = ["minimal"] }
hex = "0.4"
secp256k1 = { version = "0.31.1" }
warp = "0.3"
base64 = "0.22.1"
k256 = "0.13.4"