[package]
name = "pulse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pulse-server"
path = "./src/server.rs"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
http-body-util = "0.1.2"
hyper = "1.5.1"
hyper-util = { version = "0.1.10", features = ["tokio"] }
oyster-sdk = "0.9.0"
reqwest = "0.12.9"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
