[package]
name = "oyster-operator-arb-indexer"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
alloy = { version = "1.0.33", features = ["full"] }
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "bigdecimal"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-retry = "0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
panic = "abort"