[package]
name = "control-plane"
version = "3.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "cp"
path = "src/lib.rs"

[[bin]]
name = "ami"
path = "src/ami.rs"

[[bin]]
name = "enclaver"
path = "src/enclaver.rs"

[dependencies]
alloy = { version = "1.0", features = ["provider-ws"] }
anyhow = "1.0.99"
async-stream = "0.3.6"
aws-config = { version = "1.8.4", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.157.0"
aws-types = "1.3.8"
axum = "0.8.4"
base64 = "0.22.1"
clap = { version = "4.5.44", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.12.22", features = ["rustls-tls"], default-features = false }
serde = "1.0.219"
serde_json = "1.0.142"
shell-escape = "0.1.5"
ssh-key = { version = "0.6.7", features = ["ed25519", "rand_core"] }
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }
tokio = { version = "1.47.1", features = ["full", "test-util"] }
tokio-stream = "0.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
whoami = "1.6.1"

[dev-dependencies]
httpc-test = "0.1.10"

[profile.release]
lto = true
codegen-units = 1
