[package]
name = "control-plane"
version = "3.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "cp"
path = "src/lib.rs"

[[bin]]
name = "ami"
path = "src/ami.rs"

[[bin]]
name = "enclaver"
path = "src/enclaver.rs"

[dependencies]
alloy = { version = "0.9", features = ["full"] }
anyhow = "1.0.95"
aws-config = { version = "1.5.12", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.99.0"
aws-types = "1.3.3"
axum = "0.8.4"
base64 = "0.22.1"
bcs = "0.1.6"
clap = { version = "4.5.23", features = ["derive"] }
hex = "0.4.3"
prost = "0.12"
prost-types = "0.12"
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.12.12", features = ["rustls-tls"], default-features = false }
serde = "1.0.217"
serde_json = "1.0.134"
shell-escape = "0.1.5"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "bigdecimal"] }
ssh-key = { version = "0.6.7", features = ["ed25519"] }
ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
sui_sdk = { git = "https://github.com/mystenlabs/sui/", package = "sui-sdk", rev = "mainnet-v1.53.2"}
tokio = { version = "1.2", features = ["full", "test-util"] }
tokio-retry = "0.3"
tokio-stream = "0.1"
tonic = "0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
whoami = "1.5.2"

[build-dependencies]
tonic-build = "0.11"
walkdir = "2.5"

[dev-dependencies]
httpc-test = "0.1.10"

[profile.release]
lto = true
codegen-units = 1
