[package]
name = "oyster-arb-market-indexer"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
alloy = { version = "1.0.33", features = ["full"] }
anyhow = "1.0.95"
chrono = "0.4.42"
clap = { version = "4.5.23", features = ["derive"] }
dotenvy = "0.15.7"
indexer-framework = { version = "0.1.0", path = "../framework" }
serde_json = "1.0.134"
tokio = { version = "1.46.1", features = ["full"] }
tokio-retry = "0.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
panic = "abort"