[package]
name = "indexer-framework"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
alloy-primitives = { version = "1.3.1", features = ["serde"] }
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json", "chrono"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-retry = "0.3"
tracing = "0.1.41"