[package]
name = "oyster-sui-indexer"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[[bin]]
name = "oyster-sui-indexer"
path = "src/main.rs"

[dependencies]
alloy = { version = "0.3.3", features = ["full"] }
anyhow = "1.0.87"
bcs = "0.1.6"
hex = "0.4"
bigdecimal = "0.4.5"
clap = { version = "4.5.17", features = ["derive"] }
diesel = { version = "2.2.4", features = ["numeric", "postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
ethp = "0.1.0"
indexer-framework = { version = "0.1.0", path = "../framework" }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sui_rpc = { git = "https://github.com/mystenlabs/sui-rust-sdk/", package = "sui-rpc" }
sui_sdk_types = { git = "https://github.com/mystenlabs/sui-rust-sdk/", package = "sui-sdk-types" }
tokio = { version = "1.40.0", features = ["full"] }
tokio-retry = "0.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
